# python-template

./: .bumpversion.toml  .changelog.tpl  .gitchangelog.rc  .gitignore  .pinact.yaml  .pre-commit-config-extra.yaml  .pre-commit-config.yaml  CHANGELOG.txt  README.md  README.md.jinja  copier.yaml  copier.yml  ctt.toml  entrypoint.sh  pyproject.toml  pyproject.toml.jinja  {% if docker %}Dockerfile{% endif %}.jinja  {% if docker %}docker-compose.yml{% endif %}.jinja
.github/workflows/: ci.yml  pre-commit.yml  zizmor.yml
_extensions/: include_raw.py
django/: .dockerignore.jinja  .editorconfig.jinja  .env.example  .env.jinja  .gitignore.jinja  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  Dockerfile.jinja  README.md.jinja  docker-compose.yml.jinja  entrypoint.sh.jinja  helpers.sh  init.py.jinja  init.sh.jinja  nina-python-init.py.jinja  pyproject.toml.jinja  {{_copier_conf.answers_file}}.jinja
django/.github/workflows/: ci.yml.jinja  docs.yml  publish.yml  publish.yml.jinja
django/docs/: Dockerfile  README.md  book.toml.jinja  default.conf.template  shell.nix
django/docs/src/: SUMMARY.md
django/docs/theme/css/: kroki.css
django/nginx/: Dockerfile  default.conf.template
django/src/: manage.py.jinja
django/src/apps/core/: apps.py  context_processors.py
django/src/apps/users/: adapters.py  admin.py  apps.py  context_processors.py  filters.py  forms.py  managers.py  models.py  tables.py  urls.py  views.py
django/src/apps/{% if ui %}ui{% endif %}/: pagination.py  tables.py  urls.py  utils.py  views.py
django/src/config/: urls.py.jinja  wsgi.py  {% if rest %}routers.py{% endif %}
django/src/config/settings/: base.py.jinja  local.py  production.py  test.py
django/src/fixtures/: users.json
django/src/static/: {% if ui %}.gitignore{% endif %}.jinja
django/src/templates/: app.html  base.html.jinja
django/src/templates/account/: base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
django/src/{{ project_slug }}/: __init__.py  apps.py.jinja  {% if queue %}tasks.py{% endif %}
django/{% if ui %}theme{% endif %}/: Dockerfile  gulpfile.js  package.json
python/: .editorconfig.jinja  .gitignore.jinja  .pinact.yaml.jinja  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  README.md.jinja  init.py  init.sh  main.py  pyproject.toml.jinja  {% if docker %}.dockerignore{% endif %}.jinja  {% if docker %}Dockerfile{% endif %}.jinja  {% if docker %}docker-compose.yml{% endif %}.jinja  {% if docker %}entrypoint.sh{% endif %}.jinja
python/.github/workflows/: pre-commit.yml  zizmor.yml  zizmor.yml.jinja  {% if docker %}docker.yml{% endif %}
python/src/: main.py
scripts/: install-pinact.sh  maintenance.sh  release.sh
src/: main.py
src/includes/: django.yml  python.yml  shared.yml
(+42 files in other folders)
