[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
    "pytest",
    "pytest-copie",
]
requires-python = ">=3.10"
name = "nina-python-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Niccolò Cantù", email = "niccolo.cantu@nina.no"},
]
readme = "README.md"
license = {text = "GPL-3.0+"}

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]
